site/public/styles.css
body 
{
    font-family: Arial, Helvetica, sans-serif;
    margin: 0;
    background-image: url(cat.jpg);
    background-attachment: fixed;
}

.header
{
    padding: 5px;  /* padding */
    text-align: center; /* center the text */
    background:#2f3a47; /* green background */
    color: white; /* text colour */
}

/* Increase the font size of the h1 element */
.header h1
{
    font-size: 40px;
}


/* Style the top navigation bar */
.navbar 
{
    overflow: hidden; /* Hide overflow */
    background-color: #333; /* Dark background color */
}

/* Style the navigation bar links */
.navbar a
{
    float: left; /* Make sure that the links stay side-by-side */
    display: block; /* Change the display to block, for responsive reasons (see below) */
    color: white; /* White text color */
    text-align: center; /* Center the text */
    padding: 14px 20px; /* Add some padding */
    text-decoration: none; /* Remove underline */
}

/* Right-aligned link */
.navbar a.right 
{
    float: right; /* Float a link to the right */
}

/* Change color on hover/mouse-over */
.navbar a:hover 
{
    background-color: #ddd; /* Grey background color */
    color: black; /* Black text color */
}

/* Ensure proper sizing */
* 
{
    box-sizing: border-box;
}

#world-map-div
{
    /* border: 0; */
    /* margin: 0; */
    /* width: 100%; */
    /* margin-bottom:0px; */
    /* display: block; */
}

/* this is the map */
#worldmap
{
    /* background-color: black; */
    /* margin: 0; */
    width: 100%;
    /* border: ; */
    
}

.flex-container
{
    /* margin: 0; */
    /* border: 0; */
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    padding: 0.3%;
    background-color: aquamarine;
    justify-content: center;
    vertical-align: top;
}

.flex-container > div
{
    /* background-color: black; */
    width: 32%;
    margin: 10px;
    text-align: center;
    padding: 0.3%;
}

.flex-container img
{
    width: 100%;
}


/* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
@media screen and (max-width: 700px) 
{
    .row
    { 
        flex-direction: column;
    }
}

/* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
@media screen and (max-width: 400px) 
{
    .navbar a 
    {
        float: none;
        width: 100%;
    }
}

.footer 
{
    padding: 10px; /* Some padding */
    text-align: center; /* Center text*/
    background: #ddd; /* Grey background */
}

